--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -48,5 +48,14 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/searchView"
+        android:layout_toRightOf="@+id/language_button"
+        android:layout_toEndOf="@+id/language_button"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:text="Deneme" />
 
 </RelativeLayout>
