--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -1,4 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/C"
+        android:title="C"/>
+    <item
+        android:id="@+id/CArtı"
+        android:title="C++"/>
+    <item
+        android:id="@+id/All"
+        android:title="All"/>
 </menu>
