--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -3,9 +3,6 @@
         android:id="@+id/C"
         android:title="C"/>
     <item
-        android:id="@+id/C++"
+        android:id="@+id/CArti"
         android:title="C++" />
-    <item
-        android:id="@+id/All"
-        android:title="All"/>
 </menu>
