--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -5,4 +5,11 @@
     <item
         android:id="@+id/CArti"
         android:title="C++" />
+    <item
+        android:id="@+id/General"
+        android:title="General" />
+    <item
+        android:id="@+id/OOP"
+        android:title="OOP" />
+
 </menu>
