--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -35,8 +35,7 @@
         android:text="Result"
         android:background="@android:color/background_light"
         android:textColor="@android:color/black"
-        android:layout_below="@+id/search_button"
-        android:layout_alignParentBottom="true" />
+        android:layout_below="@+id/search_button" />
 
     <Button
         android:id="@+id/language_button"
@@ -46,14 +45,5 @@
         android:layout_below="@+id/searchView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
-
-    <Button
-        android:id="@+id/log_out"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/search_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/search_button"
-        android:text="Log Out" />
 
 </RelativeLayout>
